--- a/css/style.css
+++ b/css/style.css
@@ -57,7 +57,7 @@ a:visited {
   }
 }
 
-img {
+#image {
   max-width: 100%;
   display: block;
   height: auto;
@@ -68,6 +68,8 @@ img {
   background: royalblue;
   padding: 10px;
   margin: 0;
+  display: block;
+  justify-content: center;
 }
 
 #img-caption {
@@ -98,12 +100,9 @@ li {
 }
 
 
-#quote {
-  margin-top: 80px;
-  margin-bottom: 80px;
-}
 
-#quote blockquote {
+
+blockquote {
   font-size: 1.3em;
   border: none;
   margin: 0;
@@ -111,12 +110,27 @@ li {
   background-color: ghostwhite;
 }
 
-#quote::before {
-  content: "\275D";
-  font-size: 10em;
-  display: inline-block;
-  position: absolute;
-  top: -60px;
-  left: 0;
-  opacity: 0.1;
+#quote {
+  margin-top: 80px;
+  margin-bottom: 80px;
+}
+
+/* unvisited link */
+#tribute-link a:hover {
+  color: red;
+}
+
+/* visited link */
+#tribute-link a:visited {
+  color: green;
+}
+
+/* mouse over link */
+#tribute-page a:hover {
+  color: hotpink;
+}
+
+/* selected link */
+#tribute-link a:active {
+  color: blue;
 }
